feat: added ga4, updated projects link external

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://iqbalibrahim.co.uk'
 languageCode = 'en-gb'
 title = 'Iqbal Ibrahim'
-googleAnalyticsID = "G-9YZSSYL2M2"
+googleAnalytics = "G-9YZSSYL2M2"
